Modules/SECURITY-GROUP/main.tf

#---------------------------------------------------------------
#This is the resource block for security group for my module
#---------------------------------------------------------------
resource "aws_security_group" "alb_security_group" {
  name        = "ALB-SG"
  description = "Allow specified traffic from internet"
  vpc_id      = var.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ALB-SG"
  }
}

resource "aws_security_group" "web_server_security_group" {
  name        = "Web-Server-SG"
  description = "Allow specified traffic from load balancer"
  vpc_id      = var.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_security_group.id]
  }

  tags = {
    Name = "Web-Server-SG"
  }
}
